# field-tech-assistant

./: .gitignore  Dockerfile  LICENSE  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
server/: app.py  env.py  models.py
